fix button alignment in issue voucher form

--- a/style/style.css
+++ b/style/style.css
@@ -1173,4 +1173,8 @@ input[type=radio]:checked ~ label{
 .chart-view-stat{
 	width: 70%;
 }
+
+.btn-n{
+	left: 25%;
+}
 /*new-additions*/
